Beginning to check the code style